Add functional user creation form

--- a/JSON_SERVER/index.html
+++ b/JSON_SERVER/index.html
@@ -34,13 +34,13 @@
     <div class="displayFlex">
     <form id="addFormContainer">
       <p id="paragraphForm">Stwórz postać</p>
-      <input id="nameUser" type="text" placeholder="Nazwa postaci" class="formElementStyle"/>
-      <select class="formElementStyle">
+      <input id="nameUserInput" type="text" placeholder="Nazwa postaci" class="formElementStyle"/>
+      <select id="statusInput" class="formElementStyle">
         <option value="Alive">Żywy</option>
         <option value="Dead">Martwy</option>
         <option value="unknown">Nieznany</option>
       </select>
-      <input id="speciesUser" type="text" placeholder="Rasa" class="formElementStyle"/>
+      <input id="speciesUserInput" type="text" placeholder="Rasa" class="formElementStyle"/>
       <button id="createUserButton" class="formElementStyle">Stwórz</button>
     </form>
     </div>
